fix(footer): flex-wrap sentences in copyright block

--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -66,6 +66,9 @@ $footer-width: 1450px;
 
 .copyright {
   margin-top: r(20px);
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.75ch;
 }
 
 .socialsGroup {
